srv/kit_lanche/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kit-lanche
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kit-lanche
    spec:
      containers:
        - image: nginx:latest
          name: kit-lanche-nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: kit-lanche-nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: site.conf
              readOnly: true
            - name: kit-lanche-code
              mountPath: /code

        - image: cticsjeifsc/php-fpm-add-pdo-mysql
          name: kit-lanche-php
          volumeMounts:
            - name: kit-lanche-code
              mountPath: /code

        - image: mariadb
          name: kit-lanche-mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: kit-lanche-mariadb-dump
              mountPath: /docker-entrypoint-initdb.d/dump.sql
              subPath: dump.sql
            - name: kit-lanche-mariadb-base
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
      - name: kit-lanche-secret
        secret:
          secretName: kit-lanche-secret
      - name: kit-lanche-mariadb-dump
        persistentVolumeClaim:
          claimName: kit-lanche-mariadb-dump
      - name: kit-lanche-mariadb-base
        persistentVolumeClaim:
          claimName: kit-lanche-mariadb-base
      - name: kit-lanche-nginx-conf
        configMap:
          name: kit-lanche-nginx-conf
      - name: kit-lanche-code
        persistentVolumeClaim:
          claimName: kit-lanche-code
