srv/kit_lanche/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kit-lanche
  name: kit-lanche
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: kit-lanche
