srv/kit_lanche/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kit-lanche
spec:
  tls:
    - hosts:
        - kitlanche.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: kitlanche.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: kit-lanche
              servicePort: 80
